# Ros_Intro

./: .bashrc  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
install/talker_listener/share/talker_listener/: package.sh  package.xml
install/talker_listener/share/talker_listener/launch/: talker_listener.launch.py
log/: latest_build  latest_list
my_robot_controller/: package.xml  setup.py
my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py  turtle_controller.py
notebook_ws/: default.ipynb
notebook_ws/.ipynb_checkpoints/: default-checkpoint.ipynb
ros2_ws/install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
ros2_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
ros2_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
ros2_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
ros2_ws/rosbags/turtlebot_test_2/: turtlebot_test_2_0.db3
ros2_ws/rosbags/turtlebot_test_4/: turtlebot_test_4_0.db3
ros2_ws/src/object_detection/: package.xml  setup.py
ros2_ws/src/object_detection/object_detection/: object_detection.py
simulation_ws/install/ros2_aruco_interfaces/share/ros2_aruco_interfaces/rust/: Cargo.toml
simulation_ws/log/: latest_build
src/talker_listener/: setup.py
src/talker_listener/talker_listener/: listener_node.py
(+41 files in other folders)
